syntax = "proto3";

package ares.core;

import "ExperimentTemplate.proto";

message CampaignTemplate {
	repeated ExperimentTemplate ExperimentTemplates = 1; // Collection of experiment templates to be used for generating executable experiments
}